convert to kedro pipeline (with bug)

--- a/fpl/notebooks/model.ipynb
+++ b/fpl/notebooks/model.ipynb
@@ -199,6 +199,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numerical_features = ['ROUND', 'POSS', 'DAYS_TILL_NEXT', 'DAYS_SINCE_LAST', 'ATT_TOTAL', 'HOME_ATT_TOTAL', 'AWAY_ATT_TOTAL'] \n",
+    "# 'DEF_TOTAL', 'HOME_DEF_TOTAL', 'AWAY_DEF_TOTAL', 'DATE', 'XGA', ]\n",
+    "categorical_features = ['VENUE', 'TEAM', 'OPPONENT']\n",
+    "target = \"XG\"\n",
+    "\n",
+    "train_val_data = processed_data[processed_data['SEASON'] < \"2021-2022\"]\n",
+    "X_train_val = train_val_data[numerical_features+categorical_features]\n",
+    "y_train_val = train_val_data[target]\n",
+    "\n",
+    "holdout_data = processed_data[processed_data['SEASON'] >= \"2021-2022\"]\n",
+    "X_holdout  = holdout_data[numerical_features+categorical_features]\n",
+    "y_holdout  = holdout_data[target]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
    "outputs": [
@@ -228,19 +248,6 @@
     }
    ],
    "source": [
-    "numerical_features = ['ROUND', 'POSS', 'DAYS_TILL_NEXT', 'DAYS_SINCE_LAST', 'ATT_TOTAL', 'HOME_ATT_TOTAL', 'AWAY_ATT_TOTAL'] \n",
-    "# 'DEF_TOTAL', 'HOME_DEF_TOTAL', 'AWAY_DEF_TOTAL', 'DATE', 'XGA', ]\n",
-    "categorical_features = ['VENUE', 'TEAM', 'OPPONENT']\n",
-    "target = \"XG\"\n",
-    "\n",
-    "train_val_data = processed_data[processed_data['SEASON'] < \"2021-2022\"]\n",
-    "X_train_val = train_val_data[numerical_features+categorical_features]\n",
-    "y_train_val = train_val_data[target]\n",
-    "\n",
-    "holdout_data = processed_data[processed_data['SEASON'] >= \"2021-2022\"]\n",
-    "X_holdout  = holdout_data[numerical_features+categorical_features]\n",
-    "y_holdout  = holdout_data[target]\n",
-    "\n",
     "groups = train_val_data[\"SEASON\"]\n",
     "n_splits = groups.nunique()\n",
     "print(f\"{groups.unique() = }\")\n",
