--- a/fpl/notebooks/rename_tables.ipynb
+++ b/fpl/notebooks/rename_tables.ipynb
@@ -1,58 +1,12 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Rename tables"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlite3\n",
-    "\n",
-    "db_path = '../data/fpl.db'\n",
-    "conn = sqlite3.connect(db_path)\n",
-    "cursor = conn.cursor()\n",
-    "\n",
-    "# Find all tables in the database\n",
-    "cursor.execute(\"SELECT name FROM sqlite_master WHERE type='table'\")\n",
-    "tables = cursor.fetchall()\n",
-    "\n",
-    "# Iterate through the tables\n",
-    "for table in tables:\n",
-    "    old_name = table[0]\n",
-    "    # Remove prefix number and underscore, then convert to lowercase\n",
-    "    new_name = old_name.lstrip('0123456789_').lower()\n",
-    "    if old_name[:2] == \"01\":\n",
-    "        new_name = f\"raw_{new_name}\"\n",
-    "\n",
-    "    # Rename the table\n",
-    "    if old_name != new_name:\n",
-    "        print(f\"{old_name}-->{new_name}\")\n",
-    "        if old_name == new_name.upper():\n",
-    "            cursor.execute(f\"ALTER TABLE \\\"{old_name}\\\" RENAME TO \\\"01_{old_name}\\\"\")\n",
-    "            cursor.execute(f\"ALTER TABLE \\\"01_{old_name}\\\" RENAME TO {new_name}\")\n",
-    "        else:\n",
-    "            cursor.execute(f\"ALTER TABLE \\\"{old_name}\\\" RENAME TO {new_name}\")\n",
-    "\n",
-    "\n",
-    "# Commit the changes and close the connection\n",
-    "conn.commit()\n",
-    "conn.close()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Rename columns"
+    "from flatten_dict import flatten, unflatten"
    ]
   },
   {
@@ -61,54 +15,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_path = '../data/fpl.db'\n",
-    "conn = sqlite3.connect(db_path)\n",
-    "cursor = conn.cursor()\n",
-    "\n",
-    "# Find all tables in the database\n",
-    "cursor.execute(\"SELECT name FROM sqlite_master WHERE type='table'\")\n",
-    "tables = cursor.fetchall()\n",
-    "\n",
-    "# Iterate through the tables\n",
-    "for table in tables:\n",
-    "    table_name = table[0]\n",
-    "\n",
-    "    # Get column names for the table\n",
-    "    cursor.execute(f\"PRAGMA table_info({table_name})\")\n",
-    "    columns = cursor.fetchall()\n",
-    "\n",
-    "    # Create a temporary table with lowercase column names\n",
-    "    new_columns = []\n",
-    "    for col in columns:\n",
-    "        name = col[1]\n",
-    "        _type = col[2]\n",
-    "        name = name.lower()\n",
-    "        if name == \"index\":\n",
-    "            name = \"id\"\n",
-    "        new_columns.append(f\"{name} {_type}\")\n",
-    "    old_columns = [col[1] if col[1] != \"index\" else \"'index'\" for col in columns]\n",
-    "    new_columns_without_type = [col.split()[0] for col in new_columns]\n",
-    "\n",
-    "    if old_columns!=new_columns_without_type:\n",
-    "        new_columns_str = ', '.join(new_columns)\n",
-    "        cursor.execute(f\"CREATE TABLE temp_table ({new_columns_str})\")\n",
-    "\n",
-    "        # Copy data from the original table to the temporary table\n",
-    "        old_columns_str = ', '.join(old_columns)\n",
-    "        cursor.execute(f\"INSERT INTO temp_table SELECT {old_columns_str} FROM {table_name}\")\n",
-    "\n",
-    "        # # Drop the original table\n",
-    "        cursor.execute(f\"DROP TABLE {table_name}\")\n",
-    "\n",
-    "        # # Rename the temporary table to the original table name\n",
-    "        cursor.execute(f\"ALTER TABLE temp_table RENAME TO {table_name}\")\n",
-    "\n",
-    "        print(\"Renamed all columns in table\", table_name)\n",
-    "\n",
-    "# Commit the changes and close the connection\n",
-    "conn.commit()\n",
-    "conn.close()"
+    "def find_search_groups(search_group_params: dict) -> list[dict]:\n",
+    "    flat_param_dict = flatten(search_group_params, reducer=\"dot\")\n",
+    "    if len(flat_param_dict.keys()) > 1:\n",
+    "        raise ValueError(f\"Cannot group by more than one key.\")\n",
+    "    if len(flat_param_dict.keys()) == 0:\n",
+    "        return []\n",
+    "    else:\n",
+    "        key = list(flat_param_dict.keys())[0]\n",
+    "        groups = list(flat_param_dict.values())[0]\n",
+    "        for group in groups:\n",
+    "            print({key: group})\n",
+    "            print(unflatten({key: group}))\n",
+    "        return [unflatten({key: group}, splitter=\"dot\") for group in groups]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'model.models': ['huber']}\n",
+      "{'m': {'o': {'d': {'e': {'l': {'.': {'m': {'o': {'d': {'e': {'l': {'s': ['huber']}}}}}}}}}}}}\n",
+      "{'model.models': ['ridge']}\n",
+      "{'m': {'o': {'d': {'e': {'l': {'.': {'m': {'o': {'d': {'e': {'l': {'s': ['ridge']}}}}}}}}}}}}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'model': {'models': ['huber']}}, {'model': {'models': ['ridge']}}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_search_groups({\n",
+    "    'model': {\n",
+    "        'models': [\n",
+    "            ['huber'],\n",
+    "            ['ridge']\n",
+    "        ]\n",
+    "    }\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
