--- a/fpl/notebooks/data.ipynb
+++ b/fpl/notebooks/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "from datetime import timedelta\n",
     "import requests\n",
     "from tqdm import tqdm\n",
+    "import re\n",
     "\n",
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +227,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,471 +243,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fetching player history: 100%|██████████| 5/5 [00:02<00:00,  1.83it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "def fetch_player_fixtures(player_id: int, current_season: str) -> [pd.DataFrame, pd.DataFrame]:\n",
-    "    r = requests.get(f\"https://fantasy.premierleague.com/api/element-summary/{player_id}/\")\n",
-    "    data = r.json()\n",
-    "    history = pd.DataFrame(data[\"history\"])\n",
-    "    fixtures = pd.DataFrame(data[\"fixtures\"])\n",
-    "    fixtures[\"element\"] = player_id\n",
-    "    fixtures['opponent_team'] = fixtures.apply(lambda row: row['team_a'] if row['is_home'] else row['team_h'], axis=1)\n",
-    "    fixtures = fixtures[[\"element\", \"kickoff_time\", \"opponent_team\", \"is_home\", \"id\", \"event\"]]\n",
-    "    fixtures = fixtures.rename({\"is_home\": \"was_home\", \"id\": \"fixture\", \"event\": \"round\"}, axis=1)\n",
-    "    fixtures = pd.concat([history, fixtures])\n",
-    "    fixtures[\"season\"] = current_season\n",
-    "    return fixtures\n",
-    "\n",
-    "\n",
-    "def get_current_season_fpl_data(current_season: str) -> pd.DataFrame:\n",
-    "    element_data, team_data, _, _ = get_fpl_base_data()\n",
-    "    element_data = element_data.query(\"team == 'Arsenal' and position == 'MID' and now_cost > 60\")\n",
-    "\n",
-    "    tqdm.pandas(desc=\"Fetching player history\")\n",
-    "    all_fixtures = element_data[\"id\"].progress_apply(fetch_player_fixtures, current_season=current_season)\n",
-    "\n",
-    "    current_season_data = pd.concat(all_fixtures.values.tolist(), ignore_index=True)\n",
-    "    current_season_data = pd.merge(element_data, current_season_data, left_on=\"id\", right_on=\"element\")\n",
-    "    current_season_data[\"opponent_team_name\"] = current_season_data[\"opponent_team\"].map(team_data[\"name\"].to_dict())\n",
-    "    current_season_data = current_season_data[[\n",
-    "        \"season\",\n",
-    "        \"round\",\n",
-    "        \"element\",\n",
-    "        \"full_name\",\n",
-    "        \"team\",\n",
-    "        \"position\",\n",
-    "        \"fixture\",\n",
-    "        \"opponent_team\",\n",
-    "        \"opponent_team_name\",\n",
-    "        \"total_points\",\n",
-    "        \"was_home\",\n",
-    "        \"kickoff_time\",\n",
-    "        \"team_h_score\",\n",
-    "        \"team_a_score\",\n",
-    "        \"minutes\",\n",
-    "        \"goals_scored\",\n",
-    "        \"assists\",\n",
-    "        \"clean_sheets\",\n",
-    "        \"goals_conceded\",\n",
-    "        \"own_goals\",\n",
-    "        \"penalties_saved\",\n",
-    "        \"penalties_missed\",\n",
-    "        \"yellow_cards\",\n",
-    "        \"red_cards\",\n",
-    "        \"saves\",\n",
-    "        \"bonus\",\n",
-    "        \"bps\",\n",
-    "        \"influence\",\n",
-    "        \"creativity\",\n",
-    "        \"threat\",\n",
-    "        \"ict_index\",\n",
-    "        \"value\",\n",
-    "        \"transfers_balance\",\n",
-    "        \"selected\",\n",
-    "        \"transfers_in\",\n",
-    "        \"transfers_out\",\n",
-    "        'expected_goals',\n",
-    "        'expected_goal_involvements', \n",
-    "        'expected_assists',\n",
-    "        'expected_goals_conceded'\n",
-    "    ]]\n",
-    "    return current_season_data\n",
-    "\n",
-    "current_season_data = get_current_season_fpl_data(\"2023-2024\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>season</th>\n",
-       "      <th>round</th>\n",
-       "      <th>element</th>\n",
-       "      <th>full_name</th>\n",
-       "      <th>team</th>\n",
-       "      <th>position</th>\n",
-       "      <th>fixture</th>\n",
-       "      <th>opponent_team</th>\n",
-       "      <th>opponent_team_name</th>\n",
-       "      <th>total_points</th>\n",
-       "      <th>...</th>\n",
-       "      <th>ict_index</th>\n",
-       "      <th>value</th>\n",
-       "      <th>transfers_balance</th>\n",
-       "      <th>selected</th>\n",
-       "      <th>transfers_in</th>\n",
-       "      <th>transfers_out</th>\n",
-       "      <th>expected_goals</th>\n",
-       "      <th>expected_goal_involvements</th>\n",
-       "      <th>expected_assists</th>\n",
-       "      <th>expected_goals_conceded</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-2024</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Kai Havertz</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16</td>\n",
-       "      <td>Nott'm Forest</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>407159.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.29</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>1.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-2024</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Kai Havertz</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>12</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Crystal Palace</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>-63530.0</td>\n",
-       "      <td>377081.0</td>\n",
-       "      <td>8492.0</td>\n",
-       "      <td>72022.0</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>1.06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023-2024</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Kai Havertz</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>21</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Fulham</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>-76821.0</td>\n",
-       "      <td>308042.0</td>\n",
-       "      <td>5577.0</td>\n",
-       "      <td>82398.0</td>\n",
-       "      <td>0.27</td>\n",
-       "      <td>0.41</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>0.29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-2024</td>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Kai Havertz</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>31</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Man Utd</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.1</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>-84114.0</td>\n",
-       "      <td>228041.0</td>\n",
-       "      <td>1637.0</td>\n",
-       "      <td>85751.0</td>\n",
-       "      <td>0.36</td>\n",
-       "      <td>0.40</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2023-2024</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Kai Havertz</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>43</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Everton</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>2023-2024</td>\n",
-       "      <td>34</td>\n",
-       "      <td>26</td>\n",
-       "      <td>Leandro Trossard</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>340</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Wolves</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186</th>\n",
-       "      <td>2023-2024</td>\n",
-       "      <td>35</td>\n",
-       "      <td>26</td>\n",
-       "      <td>Leandro Trossard</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>348</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Spurs</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>187</th>\n",
-       "      <td>2023-2024</td>\n",
-       "      <td>36</td>\n",
-       "      <td>26</td>\n",
-       "      <td>Leandro Trossard</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>351</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Bournemouth</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>188</th>\n",
-       "      <td>2023-2024</td>\n",
-       "      <td>37</td>\n",
-       "      <td>26</td>\n",
-       "      <td>Leandro Trossard</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>365</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Man Utd</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>2023-2024</td>\n",
-       "      <td>38</td>\n",
-       "      <td>26</td>\n",
-       "      <td>Leandro Trossard</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>371</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Everton</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>190 rows × 40 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        season  round  element         full_name     team position  fixture  \\\n",
-       "0    2023-2024      1        6       Kai Havertz  Arsenal      MID        2   \n",
-       "1    2023-2024      2        6       Kai Havertz  Arsenal      MID       12   \n",
-       "2    2023-2024      3        6       Kai Havertz  Arsenal      MID       21   \n",
-       "3    2023-2024      4        6       Kai Havertz  Arsenal      MID       31   \n",
-       "4    2023-2024      5        6       Kai Havertz  Arsenal      MID       43   \n",
-       "..         ...    ...      ...               ...      ...      ...      ...   \n",
-       "185  2023-2024     34       26  Leandro Trossard  Arsenal      MID      340   \n",
-       "186  2023-2024     35       26  Leandro Trossard  Arsenal      MID      348   \n",
-       "187  2023-2024     36       26  Leandro Trossard  Arsenal      MID      351   \n",
-       "188  2023-2024     37       26  Leandro Trossard  Arsenal      MID      365   \n",
-       "189  2023-2024     38       26  Leandro Trossard  Arsenal      MID      371   \n",
-       "\n",
-       "     opponent_team opponent_team_name  total_points  ...  ict_index value  \\\n",
-       "0               16      Nott'm Forest           2.0  ...        5.5  75.0   \n",
-       "1                8     Crystal Palace           2.0  ...        1.9  75.0   \n",
-       "2               10             Fulham           1.0  ...        4.2  74.0   \n",
-       "3               14            Man Utd           2.0  ...        4.1  73.0   \n",
-       "4                9            Everton           NaN  ...        NaN   NaN   \n",
-       "..             ...                ...           ...  ...        ...   ...   \n",
-       "185             20             Wolves           NaN  ...        NaN   NaN   \n",
-       "186             18              Spurs           NaN  ...        NaN   NaN   \n",
-       "187              3        Bournemouth           NaN  ...        NaN   NaN   \n",
-       "188             14            Man Utd           NaN  ...        NaN   NaN   \n",
-       "189              9            Everton           NaN  ...        NaN   NaN   \n",
-       "\n",
-       "     transfers_balance  selected  transfers_in  transfers_out  expected_goals  \\\n",
-       "0                  0.0  407159.0           0.0            0.0            0.05   \n",
-       "1             -63530.0  377081.0        8492.0        72022.0            0.02   \n",
-       "2             -76821.0  308042.0        5577.0        82398.0            0.27   \n",
-       "3             -84114.0  228041.0        1637.0        85751.0            0.36   \n",
-       "4                  NaN       NaN           NaN            NaN             NaN   \n",
-       "..                 ...       ...           ...            ...             ...   \n",
-       "185                NaN       NaN           NaN            NaN             NaN   \n",
-       "186                NaN       NaN           NaN            NaN             NaN   \n",
-       "187                NaN       NaN           NaN            NaN             NaN   \n",
-       "188                NaN       NaN           NaN            NaN             NaN   \n",
-       "189                NaN       NaN           NaN            NaN             NaN   \n",
-       "\n",
-       "     expected_goal_involvements  expected_assists  expected_goals_conceded  \n",
-       "0                          0.29              0.24                     1.18  \n",
-       "1                          0.07              0.05                     1.06  \n",
-       "2                          0.41              0.14                     0.29  \n",
-       "3                          0.40              0.04                     0.90  \n",
-       "4                           NaN               NaN                      NaN  \n",
-       "..                          ...               ...                      ...  \n",
-       "185                         NaN               NaN                      NaN  \n",
-       "186                         NaN               NaN                      NaN  \n",
-       "187                         NaN               NaN                      NaN  \n",
-       "188                         NaN               NaN                      NaN  \n",
-       "189                         NaN               NaN                      NaN  \n",
-       "\n",
-       "[190 rows x 40 columns]"
+       "[2016, 2017, 2018, 2019, 2020, 2021, 2022, 2023]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "current_season_data"
+    "current_season = \"2023-2024\"\n",
+    "current_year = int(re.findall(r'\\d+', current_season)[0])\n",
+    "[i for i in range(2016, current_year+1)]"
    ]
   },
   {
