scrape latest fbref data

--- a/fpl/notebooks/data.ipynb
+++ b/fpl/notebooks/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -47,198 +47,57 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>season</th>\n",
+       "      <th>player</th>\n",
+       "      <th>date</th>\n",
+       "      <th>day</th>\n",
+       "      <th>comp</th>\n",
        "      <th>round</th>\n",
-       "      <th>element</th>\n",
-       "      <th>full_name</th>\n",
-       "      <th>team</th>\n",
-       "      <th>position</th>\n",
-       "      <th>fixture</th>\n",
-       "      <th>opponent_team</th>\n",
-       "      <th>opponent_team_name</th>\n",
-       "      <th>total_points</th>\n",
+       "      <th>venue</th>\n",
+       "      <th>result</th>\n",
+       "      <th>squad</th>\n",
+       "      <th>opponent</th>\n",
        "      <th>...</th>\n",
-       "      <th>ict_index</th>\n",
-       "      <th>value</th>\n",
-       "      <th>transfers_balance</th>\n",
-       "      <th>selected</th>\n",
-       "      <th>transfers_in</th>\n",
-       "      <th>transfers_out</th>\n",
-       "      <th>expected_goals</th>\n",
-       "      <th>expected_goal_involvements</th>\n",
-       "      <th>expected_assists</th>\n",
-       "      <th>expected_goals_conceded</th>\n",
+       "      <th>xag</th>\n",
+       "      <th>sca</th>\n",
+       "      <th>gca</th>\n",
+       "      <th>sota</th>\n",
+       "      <th>ga</th>\n",
+       "      <th>saves</th>\n",
+       "      <th>savepct</th>\n",
+       "      <th>cs</th>\n",
+       "      <th>psxg</th>\n",
+       "      <th>link</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2018-2019</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>563</td>\n",
-       "      <td>Bukayo Saka</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>171</td>\n",
-       "      <td>4</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2018-2019</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>563</td>\n",
-       "      <td>Bukayo Saka</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>181</td>\n",
-       "      <td>3</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2018-2019</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>563</td>\n",
-       "      <td>Bukayo Saka</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>196</td>\n",
-       "      <td>12</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>167.0</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2018-2019</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>563</td>\n",
-       "      <td>Bukayo Saka</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>201</td>\n",
-       "      <td>9</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>234.0</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2018-2019</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>563</td>\n",
-       "      <td>Bukayo Saka</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>220</td>\n",
-       "      <td>19</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>426.0</td>\n",
-       "      <td>167.0</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 40 columns</p>\n",
+       "<p>0 rows × 32 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      season  round  element    full_name  team position  fixture  \\\n",
-       "0  2018-2019   18.0      563  Bukayo Saka  None     None      171   \n",
-       "1  2018-2019   19.0      563  Bukayo Saka  None     None      181   \n",
-       "2  2018-2019   20.0      563  Bukayo Saka  None     None      196   \n",
-       "3  2018-2019   21.0      563  Bukayo Saka  None     None      201   \n",
-       "4  2018-2019   22.0      563  Bukayo Saka  None     None      220   \n",
+       "Empty DataFrame\n",
+       "Columns: [season, player, date, day, comp, round, venue, result, squad, opponent, start, pos, min, gls, ast, pk, pkatt, sh, sot, touches, xg, npxg, xag, sca, gca, sota, ga, saves, savepct, cs, psxg, link]\n",
+       "Index: []\n",
        "\n",
-       "   opponent_team opponent_team_name  total_points  ...  ict_index value  \\\n",
-       "0              4               None           0.0  ...        0.0  45.0   \n",
-       "1              3               None           0.0  ...        0.0  45.0   \n",
-       "2             12               None           0.0  ...        0.0  45.0   \n",
-       "3              9               None           1.0  ...        0.0  45.0   \n",
-       "4             19               None           0.0  ...        0.0  45.0   \n",
-       "\n",
-       "   transfers_balance  selected  transfers_in  transfers_out  expected_goals  \\\n",
-       "0                0.0       0.0           0.0            0.0            None   \n",
-       "1               52.0      96.0          73.0           21.0            None   \n",
-       "2               29.0     167.0          65.0           36.0            None   \n",
-       "3               25.0     234.0          74.0           49.0            None   \n",
-       "4               71.0     426.0         167.0           96.0            None   \n",
-       "\n",
-       "   expected_goal_involvements  expected_assists  expected_goals_conceded  \n",
-       "0                        None              None                     None  \n",
-       "1                        None              None                     None  \n",
-       "2                        None              None                     None  \n",
-       "3                        None              None                     None  \n",
-       "4                        None              None                     None  \n",
-       "\n",
-       "[5 rows x 40 columns]"
+       "[0 rows x 32 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "connection = sqlite3.connect(\"../data/fpl.db\")\n",
-    "raw_data = pd.read_sql_query(\"\"\"SELECT *\n",
-    "                             FROM raw_fpl_data \n",
-    "                             where full_name = 'Bukayo Saka'\"\"\", connection)\n",
-    "# raw_data[\"start\"] = pd.to_datetime(raw_data[\"date\"])\n",
-    "raw_data.head()"
+    "current_season = '2023-2024'\n",
+    "conn = sqlite3.connect(\"../data/fpl.db\")\n",
+    "cur = conn.cursor()\n",
+    "cur.execute(f\"DELETE FROM raw_player_match_log WHERE season = '{current_season}'\")\n",
+    "conn.commit()\n",
+    "data = pd.read_sql(f\"select * from raw_player_match_log where season = '{current_season}'\", conn)\n",
+    "conn.close()\n",
+    "\n",
+    "data"
    ]
   },
   {
@@ -380,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
